# r2

./: .gitignore  GEMINI.md  README.md  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
be-demo/: Dockerfile  nginx.conf  requirements.txt
be-demo/src/backend/: main.py  models.py  persistence.py  services.py  test_utils.py  utils.py
be-demo/tests/: test_main.py  test_persistence.py  test_utils.py
be-high-level/: Dockerfile
be-high-level/src/backend/: persistence.py  services.py
be-high-level/tests/: test_main.py  test_persistence.py  test_utils.py
be-low-level/: Cargo.toml  Dockerfile
be-low-level/src/: handlers.rs  lib.rs  main.rs  models.rs  redis_store.rs  state.rs
be-low-level/tests/: api_tests.rs
secrets/: app_password.txt
